# dncformer

./: .gitignore  INSTALL.md  README.md  dncformer_notebook.ipynb  dncformer_notebook_backup_02.ipynb  pyproject.toml
.ipynb_checkpoints/: dncformer_notebook-checkpoint.ipynb
analysis/: per_task_metrics.csv  per_task_metrics_v033_no_logic_smoke.csv  run_level_summary.csv  run_level_summary_v033_no_logic_smoke.csv
cli/: train.py
dncformer/: __init__.py  compat.py  config.py
dncformer/analysis/: tb_analyzer.py
dncformer/analysis/graphics/: Basic_structure
dncformer/configs/: E17b.yaml  E17b_parallel.yaml  E18b.yaml  E18b_sequential.yaml  logic_smoke.yaml  mem_algo_heavy.yaml  mem_mix_small.yaml  multi_hf_synth.yaml  multi_hf_synth_smoke.yaml  multi_synth_only.yaml  smoke_synth.yaml  smoke_v033.yaml  smoke_v033_no_logic.yaml
dncformer/data/: hf.py  hf_instruct.py  mix.py  mixers.py  registry.py  synthetic.py  tasks_algo.py  tasks_code.py  tasks_hf.py  tasks_logic.py  tasks_math.py  tasks_synth.py  tasks_synthetic.py
dncformer/experiments/: e15e16.py  experiments.py
dncformer/log/: tb.py
dncformer/model/: blocks.py  head.py  memory.py  roles.py
dncformer/train/: loop.py  optim.py  runner.py  scheduler.py
dncformer/utils/: dist.py  env.py  env_export.py  helpers.py  yaml_utils.py
docs/: CLI.md  CONFIG.md  HOWTO_data.md  MODEL.md
tests/: block_index_test.py  test_experiments_e17_e18.py  test_loop_entry.py  test_optim_defaults.py  test_router_balance_and_dropout.py  test_runner_smoke.py  test_scheduler_and_roles.py  test_smoke.py  test_sticky_chunks.py
(+43 files in other folders)
