[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dncformer"
version = "0.2.2"
description = "DNC-augmented Transformer layer/block package"
authors = [{name="Andrew Mathau"}]
requires-python = ">=3.10"
dependencies = [
    "pytorch",
    "transformers",
    "tensorboard",
    "datasets",
    "peft",
    "pyyaml",
    "numpy",
    "tqdm",
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = [
    "dncformer",
    "dncformer.utils",
    "dncformer.log",
    "dncformer.data",
    "dncformer.model",
    "dncformer.train",
    "dncformer.experiments",
    "cli"
]
